2011-08-19  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Integer/parseInt.java:
	Fixed the test to work correctly on OpenJDK6 JRE.

2011-08-17  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/io/File/security.java:
	Fixed cleaning phase of this test, it now deletes all its
	work files and directories.

2011-04-25  Pekka Enberg  <penberg@kernel.org>

	* gnu/testlet/java/util/regex/Matcher/quoteReplacement.java:
	Add tests for Matcher.quoteReplacement().

2011-03-14  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/net/Socket/security.java:
	Add test for connect(SocketAddress, int).
	* gnu/testlet/java/net/Socket/setSocketImplFactory.java:
	Add tests for when null is specified.

2011-03-02  Pekka Enberg  <penberg@kernel.org>

	* gnu/testlet/java/lang/String/split.java:
	Add test for String.split() that caused infinite loop
	with GNU Classpath.

2011-02-22  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* gnu/testlet/java/security/Policy/Security.java,
	Test whether the toString() of a ProtectionDomain
	object includes the Policy's permissions when
	getPolicy is denied by the SecurityManager.

2010-12-24  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/security/ProtectionDomain/Implies.java:
	Check if Policy.implies(Permission) is called if the
	protection domain is already known to have AllPermission.

2010-12-21  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/lang/Class/IsAnonymousClass.java:
	Add tests for java.lang.Class#isAnonymousClass().

2010-12-13  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/lang/Class/GetSimpleName.java:
	Add tests for anonymous classes.

2010-12-12  Pekka Enberg  <penberg@kernel.org>

	* gnu/testlet/java/lang/Class/GetSimpleName.java:
	Add tests for primitive, Object, array and inner
	classes.

2010-12-01  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/TestSecurityManager.java:
	Fix whitespace.